hide overflowing social icons (temp fix)

--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -176,8 +176,8 @@
   padding-left: 2rem;
   padding-top: 2rem; */
   /* margin-top: 5rem; */
-  margin-right: 2rem;
-  margin-left: 7rem;
+  margin-right: auto;
+  margin-left: auto;
   margin-top: 5rem;
   padding: 0 1rem 1rem 1rem;
   display: flex;
